last prompt update before manual labeling

--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:34:33.788511Z",
-     "start_time": "2025-11-16T21:34:33.786295Z"
+     "end_time": "2025-11-16T22:01:02.199442Z",
+     "start_time": "2025-11-16T22:01:02.197282Z"
     }
    },
    "cell_type": "code",
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:34:34.453893Z",
-     "start_time": "2025-11-16T21:34:33.791213Z"
+     "end_time": "2025-11-16T22:01:02.843971Z",
+     "start_time": "2025-11-16T22:01:02.202043Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:34:34.459334Z",
-     "start_time": "2025-11-16T21:34:34.457682Z"
+     "end_time": "2025-11-16T22:01:02.849016Z",
+     "start_time": "2025-11-16T22:01:02.847191Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:34:34.465573Z",
-     "start_time": "2025-11-16T21:34:34.462162Z"
+     "end_time": "2025-11-16T22:01:02.855279Z",
+     "start_time": "2025-11-16T22:01:02.851492Z"
     }
    },
    "cell_type": "code",
@@ -111,8 +111,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:34:37.577737Z",
-     "start_time": "2025-11-16T21:34:34.468132Z"
+     "end_time": "2025-11-16T22:01:05.958086Z",
+     "start_time": "2025-11-16T22:01:02.857466Z"
     }
    },
    "cell_type": "code",
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:34:37.632238Z",
-     "start_time": "2025-11-16T21:34:37.625824Z"
+     "end_time": "2025-11-16T22:01:06.008086Z",
+     "start_time": "2025-11-16T22:01:06.003349Z"
     }
    },
    "cell_type": "code",
@@ -206,8 +206,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:35:37.961192Z",
-     "start_time": "2025-11-16T21:34:37.668884Z"
+     "end_time": "2025-11-16T22:02:06.341286Z",
+     "start_time": "2025-11-16T22:01:06.029939Z"
     }
    },
    "cell_type": "code",
@@ -238,8 +238,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:35:38.015709Z",
-     "start_time": "2025-11-16T21:35:37.997563Z"
+     "end_time": "2025-11-16T22:02:06.394753Z",
+     "start_time": "2025-11-16T22:02:06.376487Z"
     }
    },
    "cell_type": "code",
@@ -251,8 +251,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:35:38.021223Z",
-     "start_time": "2025-11-16T21:35:38.018782Z"
+     "end_time": "2025-11-16T22:02:06.399362Z",
+     "start_time": "2025-11-16T22:02:06.397321Z"
     }
    },
    "cell_type": "code",
@@ -275,8 +275,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:35:38.027770Z",
-     "start_time": "2025-11-16T21:35:38.023326Z"
+     "end_time": "2025-11-16T22:02:06.413220Z",
+     "start_time": "2025-11-16T22:02:06.409646Z"
     }
    },
    "cell_type": "code",
@@ -298,8 +298,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:35:38.033920Z",
-     "start_time": "2025-11-16T21:35:38.030937Z"
+     "end_time": "2025-11-16T22:02:06.418657Z",
+     "start_time": "2025-11-16T22:02:06.415709Z"
     }
    },
    "cell_type": "code",
@@ -318,8 +318,8 @@
        "\n",
        "                                ingredients_normalized  \n",
        "295  \"['sugar', 'red wine vinegar', 'oil', 'soy sau...  \n",
-       "296  \"['sugar', 'margarine', 'oil', 'applesauce', '...  \n",
-       "297           \"['oil', 'lemon juice', 'egg', 'honey']\"  \n",
+       "296  \"['white sugar', 'brown sugar', 'margarine', '...  \n",
+       "297      \"['oil', 'lemon juice', 'egg yolk', 'honey']\"  \n",
        "298  \"['hamburger', 'onion', 'salt', 'black pepper'...  \n",
        "299  \"['apple', 'flour', 'sugar', 'shortening', 'eg...  "
       ],
@@ -358,13 +358,13 @@
        "      <th>296</th>\n",
        "      <td>296</td>\n",
        "      <td>['1/2 c. white sugar', '2 c. brown sugar', '1 ...</td>\n",
-       "      <td>\"['sugar', 'margarine', 'oil', 'applesauce', '...</td>\n",
+       "      <td>\"['white sugar', 'brown sugar', 'margarine', '...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
        "      <td>297</td>\n",
        "      <td>['1 pt. oil', 'juice of 1/2 lemon', '1 egg yol...</td>\n",
-       "      <td>\"['oil', 'lemon juice', 'egg', 'honey']\"</td>\n",
+       "      <td>\"['oil', 'lemon juice', 'egg yolk', 'honey']\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>298</th>\n",
@@ -393,8 +393,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T21:35:38.054228Z",
-     "start_time": "2025-11-16T21:35:38.053153Z"
+     "end_time": "2025-11-16T22:02:06.440186Z",
+     "start_time": "2025-11-16T22:02:06.438673Z"
     }
    },
    "cell_type": "code",
