--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:01:02.199442Z",
-     "start_time": "2025-11-16T22:01:02.197282Z"
+     "end_time": "2025-11-16T23:26:25.629527Z",
+     "start_time": "2025-11-16T23:26:25.627048Z"
     }
    },
    "cell_type": "code",
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:01:02.843971Z",
-     "start_time": "2025-11-16T22:01:02.202043Z"
+     "end_time": "2025-11-16T23:26:26.286848Z",
+     "start_time": "2025-11-16T23:26:25.632328Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:01:02.849016Z",
-     "start_time": "2025-11-16T22:01:02.847191Z"
+     "end_time": "2025-11-16T23:26:26.292253Z",
+     "start_time": "2025-11-16T23:26:26.290607Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:01:02.855279Z",
-     "start_time": "2025-11-16T22:01:02.851492Z"
+     "end_time": "2025-11-16T23:26:26.298285Z",
+     "start_time": "2025-11-16T23:26:26.294768Z"
     }
    },
    "cell_type": "code",
@@ -111,8 +111,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:01:05.958086Z",
-     "start_time": "2025-11-16T22:01:02.857466Z"
+     "end_time": "2025-11-16T23:26:29.441299Z",
+     "start_time": "2025-11-16T23:26:26.300457Z"
     }
    },
    "cell_type": "code",
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:01:06.008086Z",
-     "start_time": "2025-11-16T22:01:06.003349Z"
+     "end_time": "2025-11-16T23:26:29.492044Z",
+     "start_time": "2025-11-16T23:26:29.487425Z"
     }
    },
    "cell_type": "code",
@@ -206,17 +206,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:02:06.341286Z",
-     "start_time": "2025-11-16T22:01:06.029939Z"
+     "end_time": "2025-11-16T23:34:28.927755Z",
+     "start_time": "2025-11-16T23:26:29.515084Z"
     }
    },
    "cell_type": "code",
    "source": [
     "process_food_kg_df(\n",
     "    df=df,\n",
-    "    model=\"qwen/qwen3-4b-2507\",\n",
+    "    # model=\"qwen/qwen3-4b-2507\",\n",
+    "    model=\"openai/gpt-oss-20b\",\n",
     "    client=client,\n",
-    "    restart=True, # reset the checkpoints\n",
+    "    restart=True,  # reset the checkpoints\n",
     "    stop_at=100\n",
     ")"
    ],
@@ -227,8 +228,6 @@
      "output_type": "stream",
      "text": [
       "Wrote part_0_99.csv (0:100) — checkpoint=99\n",
-      "Wrote part_100_199.csv (100:200) — checkpoint=199\n",
-      "Wrote part_200_299.csv (200:300) — checkpoint=299\n",
       "Done.\n"
      ]
     }
@@ -238,8 +237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:02:06.394753Z",
-     "start_time": "2025-11-16T22:02:06.376487Z"
+     "end_time": "2025-11-16T23:34:28.983464Z",
+     "start_time": "2025-11-16T23:34:28.973092Z"
     }
    },
    "cell_type": "code",
@@ -251,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:02:06.399362Z",
-     "start_time": "2025-11-16T22:02:06.397321Z"
+     "end_time": "2025-11-16T23:34:28.988681Z",
+     "start_time": "2025-11-16T23:34:28.986131Z"
     }
    },
    "cell_type": "code",
@@ -262,7 +261,7 @@
     {
      "data": {
       "text/plain": [
-       "300"
+       "100"
       ]
      },
      "execution_count": 9,
@@ -275,8 +274,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:02:06.413220Z",
-     "start_time": "2025-11-16T22:02:06.409646Z"
+     "end_time": "2025-11-16T23:34:28.994677Z",
+     "start_time": "2025-11-16T23:34:28.991167Z"
     }
    },
    "cell_type": "code",
@@ -284,7 +283,7 @@
     "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
     "ingredients_table = pd.DataFrame({\n",
     "    \"id\": final_df[\"id\"],\n",
-    "    \"ingredients\": final_df[\"ingredients\"], # new, kept upon request\n",
+    "    \"ingredients\": final_df[\"ingredients\"],  # new, kept upon request\n",
     "    \"ingredients_normalized\": final_df[\"ingredients_normalized\"].apply(json.dumps),\n",
     "}).sort_values(\"id\")\n",
     "# Create directory if it doesn't exist and save\n",
@@ -298,8 +297,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:02:06.418657Z",
-     "start_time": "2025-11-16T22:02:06.415709Z"
+     "end_time": "2025-11-16T23:34:28.999673Z",
+     "start_time": "2025-11-16T23:34:28.996763Z"
     }
    },
    "cell_type": "code",
@@ -309,19 +308,19 @@
     {
      "data": {
       "text/plain": [
-       "      id                                        ingredients  \\\n",
-       "295  295  ['3/4 c. sugar', '1/2 c. red wine vinegar', '1...   \n",
-       "296  296  ['1/2 c. white sugar', '2 c. brown sugar', '1 ...   \n",
-       "297  297  ['1 pt. oil', 'juice of 1/2 lemon', '1 egg yol...   \n",
-       "298  298  ['1 lb. hamburg', '1/4 c. chopped onion', '1/4...   \n",
-       "299  299  ['3 c. chopped, raw apple', '2 c. flour', '2 c...   \n",
+       "    id                                        ingredients  \\\n",
+       "95  95  ['3 (1 lb.) cans pork and beans', '1/2 c. bell...   \n",
+       "96  96  ['2 c. diced cooked chicken', '2 Tbsp. shorten...   \n",
+       "97  97  ['8 to 10 juicy oranges, peeled and diced', '1...   \n",
+       "98  98  ['1 c. creamy peanut butter', '1 c. sugar', '1...   \n",
+       "99  99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
        "\n",
-       "                                ingredients_normalized  \n",
-       "295  \"['sugar', 'red wine vinegar', 'oil', 'soy sau...  \n",
-       "296  \"['white sugar', 'brown sugar', 'margarine', '...  \n",
-       "297      \"['oil', 'lemon juice', 'egg yolk', 'honey']\"  \n",
-       "298  \"['hamburger', 'onion', 'salt', 'black pepper'...  \n",
-       "299  \"['apple', 'flour', 'sugar', 'shortening', 'eg...  "
+       "                               ingredients_normalized  \n",
+       "95  \"['pork and beans', 'bell pepper', 'onion', 'c...  \n",
+       "96  \"['chicken', 'shortening', 'onion', 'carrot', ...  \n",
+       "97  \"['orange', 'coconut', 'pecan', 'cherry', 'sug...  \n",
+       "98                \"['peanut butter', 'sugar', 'egg']\"  \n",
+       "99  \"['yellow cake mix', 'egg', 'margarine', 'milk...  "
       ],
       "text/html": [
        "<div>\n",
@@ -349,34 +348,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>295</td>\n",
-       "      <td>['3/4 c. sugar', '1/2 c. red wine vinegar', '1...</td>\n",
-       "      <td>\"['sugar', 'red wine vinegar', 'oil', 'soy sau...</td>\n",
+       "      <th>95</th>\n",
+       "      <td>95</td>\n",
+       "      <td>['3 (1 lb.) cans pork and beans', '1/2 c. bell...</td>\n",
+       "      <td>\"['pork and beans', 'bell pepper', 'onion', 'c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>296</td>\n",
-       "      <td>['1/2 c. white sugar', '2 c. brown sugar', '1 ...</td>\n",
-       "      <td>\"['white sugar', 'brown sugar', 'margarine', '...</td>\n",
+       "      <th>96</th>\n",
+       "      <td>96</td>\n",
+       "      <td>['2 c. diced cooked chicken', '2 Tbsp. shorten...</td>\n",
+       "      <td>\"['chicken', 'shortening', 'onion', 'carrot', ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>297</td>\n",
-       "      <td>['1 pt. oil', 'juice of 1/2 lemon', '1 egg yol...</td>\n",
-       "      <td>\"['oil', 'lemon juice', 'egg yolk', 'honey']\"</td>\n",
+       "      <th>97</th>\n",
+       "      <td>97</td>\n",
+       "      <td>['8 to 10 juicy oranges, peeled and diced', '1...</td>\n",
+       "      <td>\"['orange', 'coconut', 'pecan', 'cherry', 'sug...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>298</th>\n",
-       "      <td>298</td>\n",
-       "      <td>['1 lb. hamburg', '1/4 c. chopped onion', '1/4...</td>\n",
-       "      <td>\"['hamburger', 'onion', 'salt', 'black pepper'...</td>\n",
+       "      <th>98</th>\n",
+       "      <td>98</td>\n",
+       "      <td>['1 c. creamy peanut butter', '1 c. sugar', '1...</td>\n",
+       "      <td>\"['peanut butter', 'sugar', 'egg']\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>299</th>\n",
-       "      <td>299</td>\n",
-       "      <td>['3 c. chopped, raw apple', '2 c. flour', '2 c...</td>\n",
-       "      <td>\"['apple', 'flour', 'sugar', 'shortening', 'eg...</td>\n",
+       "      <th>99</th>\n",
+       "      <td>99</td>\n",
+       "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
+       "      <td>\"['yellow cake mix', 'egg', 'margarine', 'milk...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -393,8 +392,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T22:02:06.440186Z",
-     "start_time": "2025-11-16T22:02:06.438673Z"
+     "end_time": "2025-11-16T23:34:29.019827Z",
+     "start_time": "2025-11-16T23:34:29.018322Z"
     }
    },
    "cell_type": "code",
