corrected test set

--- a/test_food_kg.ipynb
+++ b/test_food_kg.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.190724Z",
-     "start_time": "2025-11-17T00:08:13.970126Z"
+     "end_time": "2025-11-17T03:44:10.302508Z",
+     "start_time": "2025-11-17T03:44:10.052772Z"
     }
    },
    "source": [
@@ -22,8 +22,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.195876Z",
-     "start_time": "2025-11-17T00:08:14.193967Z"
+     "end_time": "2025-11-17T03:44:10.308505Z",
+     "start_time": "2025-11-17T03:44:10.306436Z"
     }
    },
    "cell_type": "code",
@@ -40,8 +40,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.212395Z",
-     "start_time": "2025-11-17T00:08:14.202367Z"
+     "end_time": "2025-11-17T03:44:10.331908Z",
+     "start_time": "2025-11-17T03:44:10.313848Z"
     }
    },
    "cell_type": "code",
@@ -159,8 +159,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.242764Z",
-     "start_time": "2025-11-17T00:08:14.235561Z"
+     "end_time": "2025-11-17T03:44:10.363533Z",
+     "start_time": "2025-11-17T03:44:10.356550Z"
     }
    },
    "cell_type": "code",
@@ -186,18 +186,18 @@
        "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
        "\n",
        "                                          output_set  \\\n",
-       "0  {margarine, vanilla, butter, pecan, evaporated...   \n",
+       "0  {vanilla, pecan, margarine, rice biscuit, brow...   \n",
        "1  {chicken breast, cream of mushroom soup, sour ...   \n",
-       "2  {salt, corn, butter, garlic powder, cream chee...   \n",
-       "3  {cream of mushroom soup, chicken gravy, cheese...   \n",
-       "4  {powdered sugar, butter, chocolate chip, graha...   \n",
+       "2  {corn, salt, black pepper, garlic powder, butt...   \n",
+       "3  {cheese, cream of mushroom soup, whole chicken...   \n",
+       "4  {graham cracker crumb, powdered sugar, chocola...   \n",
        "\n",
        "                                            test_set  \n",
-       "0  {vanilla, butter, pecan, evaporated milk, rice...  \n",
+       "0  {vanilla, pecan, margarine, rice biscuit, brow...  \n",
        "1  {chicken breast, cream of mushroom soup, sour ...  \n",
-       "2  {salt, corn, butter, garlic powder, cream chee...  \n",
-       "3  {cream of mushroom soup, chicken gravy, cheese...  \n",
-       "4  {powdered sugar, butter, chocolate chip, graha...  "
+       "2  {corn, salt, black pepper, garlic powder, butt...  \n",
+       "3  {cheese, cream of mushroom soup, whole chicken...  \n",
+       "4  {graham cracker, powdered sugar, chocolate chi...  "
       ],
       "text/html": [
        "<div>\n",
@@ -229,8 +229,8 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{margarine, vanilla, butter, pecan, evaporated...</td>\n",
-       "      <td>{vanilla, butter, pecan, evaporated milk, rice...</td>\n",
+       "      <td>{vanilla, pecan, margarine, rice biscuit, brow...</td>\n",
+       "      <td>{vanilla, pecan, margarine, rice biscuit, brow...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -243,22 +243,22 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{salt, corn, butter, garlic powder, cream chee...</td>\n",
-       "      <td>{salt, corn, butter, garlic powder, cream chee...</td>\n",
+       "      <td>{corn, salt, black pepper, garlic powder, butt...</td>\n",
+       "      <td>{corn, salt, black pepper, garlic powder, butt...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, cheese...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, cheese...</td>\n",
+       "      <td>{cheese, cream of mushroom soup, whole chicken...</td>\n",
+       "      <td>{cheese, cream of mushroom soup, whole chicken...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{powdered sugar, butter, chocolate chip, graha...</td>\n",
-       "      <td>{powdered sugar, butter, chocolate chip, graha...</td>\n",
+       "      <td>{graham cracker crumb, powdered sugar, chocola...</td>\n",
+       "      <td>{graham cracker, powdered sugar, chocolate chi...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -275,8 +275,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.326234Z",
-     "start_time": "2025-11-17T00:08:14.324068Z"
+     "end_time": "2025-11-17T03:44:10.450161Z",
+     "start_time": "2025-11-17T03:44:10.448015Z"
     }
    },
    "cell_type": "code",
@@ -302,8 +302,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.365452Z",
-     "start_time": "2025-11-17T00:08:14.352682Z"
+     "end_time": "2025-11-17T03:44:10.483022Z",
+     "start_time": "2025-11-17T03:44:10.469777Z"
     }
    },
    "cell_type": "code",
@@ -351,12 +351,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.379482Z",
-     "start_time": "2025-11-17T00:08:14.369049Z"
+     "end_time": "2025-11-17T03:44:10.495450Z",
+     "start_time": "2025-11-17T03:44:10.487390Z"
     }
    },
    "cell_type": "code",
-   "source": "new_df",
+   "source": "new_df.head(100)",
    "id": "41631d2d2104c6c7",
    "outputs": [
     {
@@ -376,33 +376,33 @@
        "99  99  ['1 box yellow cake mix', '2 eggs', '1/3 c. so...   \n",
        "\n",
        "                                           output_set  \\\n",
-       "0   {margarine, vanilla, butter, pecan, evaporated...   \n",
+       "0   {vanilla, pecan, margarine, rice biscuit, brow...   \n",
        "1   {chicken breast, cream of mushroom soup, sour ...   \n",
-       "2   {salt, corn, butter, garlic powder, cream chee...   \n",
-       "3   {cream of mushroom soup, chicken gravy, cheese...   \n",
-       "4   {powdered sugar, butter, chocolate chip, graha...   \n",
+       "2   {corn, salt, black pepper, garlic powder, butt...   \n",
+       "3   {cheese, cream of mushroom soup, whole chicken...   \n",
+       "4   {graham cracker crumb, powdered sugar, chocola...   \n",
        "..                                                ...   \n",
-       "95  {ground beef, salt, bell pepper, oil, onion, p...   \n",
-       "96  {cornstarch, soy sauce, chicken bouillon cube,...   \n",
-       "97  {coconut, pecan, sugar, orange, cherry, orange...   \n",
-       "98                        {sugar, egg, peanut butter}   \n",
-       "99  {margarine, egg, pecan, bits o brickle, yellow...   \n",
+       "95  {oil, bell pepper, pork and beans, catsup, bro...   \n",
+       "96  {shortening, water, soy sauce, carrot, brown s...   \n",
+       "97  {pecan, orange, coconut, orange juice, sugar, ...   \n",
+       "98                        {sugar, peanut butter, egg}   \n",
+       "99  {pecan, margarine, yellow cake mix, egg, milk,...   \n",
        "\n",
        "                                             test_set  \\\n",
-       "0   {vanilla, butter, pecan, evaporated milk, rice...   \n",
+       "0   {vanilla, pecan, margarine, rice biscuit, brow...   \n",
        "1   {chicken breast, cream of mushroom soup, sour ...   \n",
-       "2   {salt, corn, butter, garlic powder, cream chee...   \n",
-       "3   {cream of mushroom soup, chicken gravy, cheese...   \n",
-       "4   {powdered sugar, butter, chocolate chip, graha...   \n",
+       "2   {corn, salt, black pepper, garlic powder, butt...   \n",
+       "3   {cheese, cream of mushroom soup, whole chicken...   \n",
+       "4   {graham cracker, powdered sugar, chocolate chi...   \n",
        "..                                                ...   \n",
-       "95  {ground beef, salt, bell pepper, oil, onion, p...   \n",
-       "96  {cornstarch, soy sauce, shortening, pineapple,...   \n",
-       "97  {coconut, pecan, sugar, orange, cherry, orange...   \n",
-       "98                        {sugar, egg, peanut butter}   \n",
-       "99  {margarine, egg, toffee bit, pecan, yellow cak...   \n",
+       "95  {oil, bell pepper, pork and beans, catsup, bro...   \n",
+       "96  {shortening, water, chicken bouillon, soy sauc...   \n",
+       "97  {pecan, orange, coconut, orange juice, sugar, ...   \n",
+       "98                        {sugar, peanut butter, egg}   \n",
+       "99  {pecan, margarine, toffee bit, yellow cake mix...   \n",
        "\n",
        "                 difference  intersection_size  union_size  accuracy  \\\n",
-       "0               {margarine}                  6           7  0.857143   \n",
+       "0                        {}                  7           7  1.000000   \n",
        "1                        {}                  4           4  1.000000   \n",
        "2                        {}                  6           6  1.000000   \n",
        "3                        {}                  5           5  1.000000   \n",
@@ -415,7 +415,7 @@
        "99         {bits o brickle}                  5           7  0.833333   \n",
        "\n",
        "     jaccard  precision    recall        f1  \n",
-       "0   0.857143   0.857143  1.000000  0.923077  \n",
+       "0   1.000000   1.000000  1.000000  1.000000  \n",
        "1   1.000000   1.000000  1.000000  1.000000  \n",
        "2   1.000000   1.000000  1.000000  1.000000  \n",
        "3   1.000000   1.000000  1.000000  1.000000  \n",
@@ -467,16 +467,16 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
-       "      <td>{margarine, vanilla, butter, pecan, evaporated...</td>\n",
-       "      <td>{vanilla, butter, pecan, evaporated milk, rice...</td>\n",
-       "      <td>{margarine}</td>\n",
-       "      <td>6</td>\n",
+       "      <td>{vanilla, pecan, margarine, rice biscuit, brow...</td>\n",
+       "      <td>{vanilla, pecan, margarine, rice biscuit, brow...</td>\n",
+       "      <td>{}</td>\n",
        "      <td>7</td>\n",
-       "      <td>0.857143</td>\n",
-       "      <td>0.857143</td>\n",
-       "      <td>0.857143</td>\n",
+       "      <td>7</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.923077</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -497,8 +497,8 @@
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
-       "      <td>{salt, corn, butter, garlic powder, cream chee...</td>\n",
-       "      <td>{salt, corn, butter, garlic powder, cream chee...</td>\n",
+       "      <td>{corn, salt, black pepper, garlic powder, butt...</td>\n",
+       "      <td>{corn, salt, black pepper, garlic powder, butt...</td>\n",
        "      <td>{}</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
@@ -512,8 +512,8 @@
        "      <th>3</th>\n",
        "      <td>3</td>\n",
        "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, cheese...</td>\n",
-       "      <td>{cream of mushroom soup, chicken gravy, cheese...</td>\n",
+       "      <td>{cheese, cream of mushroom soup, whole chicken...</td>\n",
+       "      <td>{cheese, cream of mushroom soup, whole chicken...</td>\n",
        "      <td>{}</td>\n",
        "      <td>5</td>\n",
        "      <td>5</td>\n",
@@ -527,8 +527,8 @@
        "      <th>4</th>\n",
        "      <td>4</td>\n",
        "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
-       "      <td>{powdered sugar, butter, chocolate chip, graha...</td>\n",
-       "      <td>{powdered sugar, butter, chocolate chip, graha...</td>\n",
+       "      <td>{graham cracker crumb, powdered sugar, chocola...</td>\n",
+       "      <td>{graham cracker, powdered sugar, chocolate chi...</td>\n",
        "      <td>{graham cracker crumb}</td>\n",
        "      <td>4</td>\n",
        "      <td>6</td>\n",
@@ -557,8 +557,8 @@
        "      <th>95</th>\n",
        "      <td>95</td>\n",
        "      <td>['3 (1 lb.) cans pork and beans', '1/2 c. bell...</td>\n",
-       "      <td>{ground beef, salt, bell pepper, oil, onion, p...</td>\n",
-       "      <td>{ground beef, salt, bell pepper, oil, onion, p...</td>\n",
+       "      <td>{oil, bell pepper, pork and beans, catsup, bro...</td>\n",
+       "      <td>{oil, bell pepper, pork and beans, catsup, bro...</td>\n",
        "      <td>{}</td>\n",
        "      <td>9</td>\n",
        "      <td>9</td>\n",
@@ -572,8 +572,8 @@
        "      <th>96</th>\n",
        "      <td>96</td>\n",
        "      <td>['2 c. diced cooked chicken', '2 Tbsp. shorten...</td>\n",
-       "      <td>{cornstarch, soy sauce, chicken bouillon cube,...</td>\n",
-       "      <td>{cornstarch, soy sauce, shortening, pineapple,...</td>\n",
+       "      <td>{shortening, water, soy sauce, carrot, brown s...</td>\n",
+       "      <td>{shortening, water, chicken bouillon, soy sauc...</td>\n",
        "      <td>{chicken bouillon cube}</td>\n",
        "      <td>13</td>\n",
        "      <td>15</td>\n",
@@ -587,8 +587,8 @@
        "      <th>97</th>\n",
        "      <td>97</td>\n",
        "      <td>['8 to 10 juicy oranges, peeled and diced', '1...</td>\n",
-       "      <td>{coconut, pecan, sugar, orange, cherry, orange...</td>\n",
-       "      <td>{coconut, pecan, sugar, orange, cherry, orange...</td>\n",
+       "      <td>{pecan, orange, coconut, orange juice, sugar, ...</td>\n",
+       "      <td>{pecan, orange, coconut, orange juice, sugar, ...</td>\n",
        "      <td>{}</td>\n",
        "      <td>6</td>\n",
        "      <td>6</td>\n",
@@ -602,8 +602,8 @@
        "      <th>98</th>\n",
        "      <td>98</td>\n",
        "      <td>['1 c. creamy peanut butter', '1 c. sugar', '1...</td>\n",
-       "      <td>{sugar, egg, peanut butter}</td>\n",
-       "      <td>{sugar, egg, peanut butter}</td>\n",
+       "      <td>{sugar, peanut butter, egg}</td>\n",
+       "      <td>{sugar, peanut butter, egg}</td>\n",
        "      <td>{}</td>\n",
        "      <td>3</td>\n",
        "      <td>3</td>\n",
@@ -617,8 +617,8 @@
        "      <th>99</th>\n",
        "      <td>99</td>\n",
        "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
-       "      <td>{margarine, egg, pecan, bits o brickle, yellow...</td>\n",
-       "      <td>{margarine, egg, toffee bit, pecan, yellow cak...</td>\n",
+       "      <td>{pecan, margarine, yellow cake mix, egg, milk,...</td>\n",
+       "      <td>{pecan, margarine, toffee bit, yellow cake mix...</td>\n",
        "      <td>{bits o brickle}</td>\n",
        "      <td>5</td>\n",
        "      <td>7</td>\n",
@@ -644,8 +644,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.421064Z",
-     "start_time": "2025-11-17T00:08:14.418709Z"
+     "end_time": "2025-11-17T03:44:10.541484Z",
+     "start_time": "2025-11-17T03:44:10.538670Z"
     }
    },
    "cell_type": "code",
@@ -662,11 +662,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.8596\n",
-      "Jaccard:   0.7938\n",
-      "Precision: 0.8610\n",
-      "Recall:    0.8674\n",
-      "F1:        0.8638\n"
+      "Accuracy:  0.8669\n",
+      "Jaccard:   0.8056\n",
+      "Precision: 0.8683\n",
+      "Recall:    0.8733\n",
+      "F1:        0.8705\n"
      ]
     }
    ],
@@ -675,8 +675,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T00:08:14.458676Z",
-     "start_time": "2025-11-17T00:08:14.457521Z"
+     "end_time": "2025-11-17T03:44:10.593482Z",
+     "start_time": "2025-11-17T03:44:10.592264Z"
     }
    },
    "cell_type": "code",
