--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:26:25.629527Z",
-     "start_time": "2025-11-16T23:26:25.627048Z"
+     "end_time": "2025-11-17T03:52:09.977713Z",
+     "start_time": "2025-11-17T03:52:09.975701Z"
     }
    },
    "cell_type": "code",
@@ -31,8 +31,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:26:26.286848Z",
-     "start_time": "2025-11-16T23:26:25.632328Z"
+     "end_time": "2025-11-17T03:52:10.843562Z",
+     "start_time": "2025-11-17T03:52:10.010672Z"
     }
    },
    "source": [
@@ -62,8 +62,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:26:26.292253Z",
-     "start_time": "2025-11-16T23:26:26.290607Z"
+     "end_time": "2025-11-17T03:52:10.888455Z",
+     "start_time": "2025-11-17T03:52:10.886406Z"
     }
    },
    "cell_type": "code",
@@ -90,8 +90,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:26:26.298285Z",
-     "start_time": "2025-11-16T23:26:26.294768Z"
+     "end_time": "2025-11-17T03:52:10.920566Z",
+     "start_time": "2025-11-17T03:52:10.918835Z"
     }
    },
    "cell_type": "code",
@@ -111,8 +111,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:26:29.441299Z",
-     "start_time": "2025-11-16T23:26:26.300457Z"
+     "end_time": "2025-11-17T03:52:14.376357Z",
+     "start_time": "2025-11-17T03:52:10.957110Z"
     }
    },
    "cell_type": "code",
@@ -124,8 +124,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:26:29.492044Z",
-     "start_time": "2025-11-16T23:26:29.487425Z"
+     "end_time": "2025-11-17T03:52:14.393277Z",
+     "start_time": "2025-11-17T03:52:14.387946Z"
     }
    },
    "cell_type": "code",
@@ -206,16 +206,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:34:28.927755Z",
-     "start_time": "2025-11-16T23:26:29.515084Z"
+     "end_time": "2025-11-17T03:52:35.117282Z",
+     "start_time": "2025-11-17T03:52:14.529071Z"
     }
    },
    "cell_type": "code",
    "source": [
     "process_food_kg_df(\n",
     "    df=df,\n",
-    "    # model=\"qwen/qwen3-4b-2507\",\n",
-    "    model=\"openai/gpt-oss-20b\",\n",
+    "    model=\"qwen/qwen3-4b-2507\",\n",
+    "    # model=\"openai/gpt-oss-20b\",  # 86.69% accuracy\n",
     "    client=client,\n",
     "    restart=True,  # reset the checkpoints\n",
     "    stop_at=100\n",
@@ -237,8 +237,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:34:28.983464Z",
-     "start_time": "2025-11-16T23:34:28.973092Z"
+     "end_time": "2025-11-17T03:52:35.163489Z",
+     "start_time": "2025-11-17T03:52:35.152726Z"
     }
    },
    "cell_type": "code",
@@ -250,8 +250,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:34:28.988681Z",
-     "start_time": "2025-11-16T23:34:28.986131Z"
+     "end_time": "2025-11-17T03:52:35.176736Z",
+     "start_time": "2025-11-17T03:52:35.173945Z"
     }
    },
    "cell_type": "code",
@@ -274,8 +274,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:34:28.994677Z",
-     "start_time": "2025-11-16T23:34:28.991167Z"
+     "end_time": "2025-11-17T03:52:35.198170Z",
+     "start_time": "2025-11-17T03:52:35.194321Z"
     }
    },
    "cell_type": "code",
@@ -297,8 +297,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:34:28.999673Z",
-     "start_time": "2025-11-16T23:34:28.996763Z"
+     "end_time": "2025-11-17T03:52:35.206790Z",
+     "start_time": "2025-11-17T03:52:35.202883Z"
     }
    },
    "cell_type": "code",
@@ -320,7 +320,7 @@
        "96  \"['chicken', 'shortening', 'onion', 'carrot', ...  \n",
        "97  \"['orange', 'coconut', 'pecan', 'cherry', 'sug...  \n",
        "98                \"['peanut butter', 'sugar', 'egg']\"  \n",
-       "99  \"['yellow cake mix', 'egg', 'margarine', 'milk...  "
+       "99  \"['yellow cake mix', 'egg', 'soft margarine', ...  "
       ],
       "text/html": [
        "<div>\n",
@@ -375,7 +375,7 @@
        "      <th>99</th>\n",
        "      <td>99</td>\n",
        "      <td>['1 box yellow cake mix', '2 eggs', '1/3 c. so...</td>\n",
-       "      <td>\"['yellow cake mix', 'egg', 'margarine', 'milk...</td>\n",
+       "      <td>\"['yellow cake mix', 'egg', 'soft margarine', ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -392,15 +392,105 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-16T23:34:29.019827Z",
-     "start_time": "2025-11-16T23:34:29.018322Z"
+     "end_time": "2025-11-17T03:52:59.862961Z",
+     "start_time": "2025-11-17T03:52:59.858509Z"
     }
    },
    "cell_type": "code",
-   "source": "",
+   "source": "final_df.head()",
    "id": "5d8d66f64f64812c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   id                                        ingredients  \\\n",
+       "0   0  ['1 c. firmly packed brown sugar', '1/2 c. eva...   \n",
+       "1   1  ['1 small jar chipped beef, cut up', '4 boned ...   \n",
+       "2   2  ['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...   \n",
+       "3   3  ['1 large whole chicken', '2 (10 1/2 oz.) cans...   \n",
+       "4   4  ['1 c. peanut butter', '3/4 c. graham cracker ...   \n",
+       "\n",
+       "                              ingredients_normalized  \n",
+       "0  ['brown sugar', 'evaporated milk', 'vanilla', ...  \n",
+       "1  ['chipped beef', 'chicken breast', 'cream of m...  \n",
+       "2  ['corn', 'cream cheese', 'butter', 'garlic pow...  \n",
+       "3  ['chicken', 'chicken gravy', 'mushroom soup', ...  \n",
+       "4  ['peanut butter', 'graham cracker crumbs', 'bu...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>ingredients</th>\n",
+       "      <th>ingredients_normalized</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>['1 c. firmly packed brown sugar', '1/2 c. eva...</td>\n",
+       "      <td>['brown sugar', 'evaporated milk', 'vanilla', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>['1 small jar chipped beef, cut up', '4 boned ...</td>\n",
+       "      <td>['chipped beef', 'chicken breast', 'cream of m...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>['2 (16 oz.) pkg. frozen corn', '1 (8 oz.) pkg...</td>\n",
+       "      <td>['corn', 'cream cheese', 'butter', 'garlic pow...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>['1 large whole chicken', '2 (10 1/2 oz.) cans...</td>\n",
+       "      <td>['chicken', 'chicken gravy', 'mushroom soup', ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>['1 c. peanut butter', '3/4 c. graham cracker ...</td>\n",
+       "      <td>['peanut butter', 'graham cracker crumbs', 'bu...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "e106a221472e4399"
   }
  ],
  "metadata": {
