--- a/process_food_kg.ipynb
+++ b/process_food_kg.ipynb
@@ -283,6 +283,7 @@
     "# CSV can’t store native Python lists (they are objects), so use JSON dump\n",
     "ingredients_table = pd.DataFrame({\n",
     "    \"id\": final_df[\"id\"],\n",
+    "    \"name\": final_df[\"name\"],\n",
     "    \"ingredients\": final_df[\"ingredients\"],  # new, kept upon request\n",
     "    \"ingredients_normalized\": final_df[\"ingredients_normalized\"].apply(json.dumps),\n",
     "}).sort_values(\"id\")\n",
