--- a/retrieve_food_kg.ipynb
+++ b/retrieve_food_kg.ipynb
@@ -294,7 +294,7 @@
    },
    "cell_type": "code",
    "source": [
-    "filtered_df = df[[\"id\", \"ingredients\"]].sort_values(by=[\"id\"])  # get only id and ingredients\n",
+    "filtered_df = df[[\"id\", \"title\", \"ingredients\"]].sort_values(by=[\"id\"])  # get only id and ingredients\n",
     "filtered_df.head()"
    ],
    "id": "b67cda3719ec6cc1",
